# ziplayer

./: COPYING.LESSER  Cargo.toml  README.md  lzma_stream_cat.py
examples/: dump_structures.rs  dump_zip.rs  extract_all.rs
src/: compression_codecs.rs  ffi.rs  ffi_interface.rs  lib.rs  read.rs  reader.rs  structures.rs  writer.rs
src/codecs/: gzip_codec.rs  mod.rs  zstd_codec.rs
