[package]
name = "ziplayer"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Xavier <mxavier@neonimp.com>"]
description = "Pure Rust implementation of the ZIP file format"
license = "LGPL-3.0-linking-exception"
keywords = ["zip", "compression", "archive", "archiver"]
repository = "https://github.com/neonimp/ziplayer"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.36"
byteorder = "1.4.3"
crc = "3.0.0"
libc = "0.2.139"

[features]
default = ["ffi"]
ffi =[]
