[package]
name = "ziplayer"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Xavier <mxavier@neonimp.com>"]
description = "Pure Rust implementation of the ZIP file format"
license = "LGPL-3.0-linking-exception"
keywords = ["zip", "compression", "archive", "archiver"]
repository = "https://github.com/neonimp/ziplayer"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.36"
crc = "3.0.0"
neoncore = "1.0.0"

[dependencies.rayon]
version = "1.6"
optional = true

[dependencies.libc]
version = "0.2.139"
optional = true

[dependencies.zstd]
version = "0.12.3+zstd.1.5.2"
optional = true

[dependencies.deflate]
version = "1.0.0"
optional = true

[features]
default = ["ffi", "multi-thread", "zstd_codec", "lzma_codec"]
ffi =["libc"]
multi-thread = ["rayon"]
zstd_codec = ["zstd"]
lzma_codec = ["deflate"]
